src/objects/DOZISF__JWT_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>DOZISF__Audience__c</fullName>
        <label>Audience</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Issuer__c</fullName>
        <label>Issuer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Private_Key__c</fullName>
        <label>Private Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Valid_Time__c</fullName>
        <description>in seconds</description>
        <label>Valid Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>JWT Setting</label>
    <pluralLabel>JWT Settings</pluralLabel>
</CustomObject>